fix(ui5-button): align buttons with and without icons on same line
FIXES: https://github.com/SAP/ui5-webcomponents/issues/795

--- a/packages/main/src/themes/Button.css
+++ b/packages/main/src/themes/Button.css
@@ -73,6 +73,8 @@
 
 .ui5-button-root .ui5-button-icon {
 	font-size: var(--_ui5_button_base_icon_only_font_size);
+	height: 0;
+	top: -.5rem;
 	position: relative;
 	color: inherit;
 }
